<resources>
    <string name="app_name">HelloMovieBooking</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_hello_welcome">Hello! Welcome to Galaxy App.</string>
    <string name="btn_lbl_get_started">Get Started</string>
    <string name="lbl_welcome_back_login_to_continue">Welcome back, login to continue</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_sign_in_with_google">Sign in with google</string>
    <string name="lbl_confirm">Confirm</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_phone_number">Phone No.</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="lbl_get_your_ticket">Get your ticket</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_enter_promo_code">Enter Promo Code</string>
    <string name="lbl_don_t_have_any_promo_code">\ Don\'t have any promo code?</string>
    <string name="lbl_total">Sub total:\ </string>
    <string name="lbl_card_holder">Card holder</string>
    <string name="lbl_expires">EXPIRES</string>
    <string name="lbl_payment_amount">Payment amount</string>
    <string name="lbl_add_new_card">Add new card</string>
    <string name="lbl_card_number">Card number</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_cvc">CVC</string>
    <string name="lbl_awesome">Awesome!</string>
    <string name="lbl_this_is_your_ticket">This is your ticket</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_show_time_date">Show time - Date</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_select_a_language">Select a language</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate us</string>
    <string name="lbl_log_out">Log out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_reserved">Reserved</string>
    <string name="lbl_your_selection">Your selection</string>
    <string name="lbl_tickets">Tickets</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="error_msg_empty">Please enter a %s.</string>
    <string name="error_msg_invalid_password">The password must be at least 6 characters.</string>
    <string name="lbl_search">Search</string>
    <string name="user_name">Hi %s!</string>
    <string name="btn_buy_ticket_lbl">Buy Ticket for $%.2f</string>
    <string name="btn_pay_total_amount_lbl">Pay $%.2f</string>
    <string name="total_amount_lbl">%.2f$</string>
</resources>