<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcomeMainContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.WelcomePageActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWelcomeImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_welcome_image"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_illustration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivWelcomeImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/lbl_hello_welcome"
        android:textColor="@color/secondaryTextColor2"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_login_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:gravity="center"
        android:text="@string/btn_lbl_get_started"
        android:textAllCaps="false"
        android:textColor="@color/secondaryTextColor2"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        android:theme="@style/Widget.Material3.Button.OutlinedButton"
        app:cornerRadius="@dimen/margin_medium"
        app:strokeColor="@color/colorPrimaryLight" />


</RelativeLayout>