<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewCardActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackNewCard"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="@dimen/margin_xlarge"
        android:layout_height="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_medium_3"
        android:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_baseline_arrow_back_ios_white_24dp"
        app:iconSize="@dimen/margin_large"
        app:iconTint="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBackNewCard"
        android:layout_alignStart="@id/edtCardNumber"
        android:text="@string/lbl_card_number"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/text_regular_2x"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edtCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCardNumber"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_3"
        android:backgroundTint="@color/secondaryTextColor"
        android:hint="@string/lbl_card_number"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_medium_2"
        android:textColorHint="@color/secondaryTextColor"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCardHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCardNumber"
        android:layout_alignStart="@id/edtCardHolder"
        android:text="@string/lbl_card_holder"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/text_regular_2x"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edtCardHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCardHolder"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_3"
        android:backgroundTint="@color/secondaryTextColor"
        android:hint="@string/lbl_card_holder"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_medium_2"
        android:textColorHint="@color/secondaryTextColor"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCardHolder"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExpireDateNewCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/edtExpireDateNewCard"
                android:text="@string/lbl_expiration_date"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/text_regular_2x"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edtExpireDateNewCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvExpireDateNewCard"
                android:backgroundTint="@color/secondaryTextColor"
                android:hint="@string/lbl_expiration_date"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_medium_2"
                android:inputType="phone"
                android:textColorHint="@color/secondaryTextColor"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/edtCVC"
                android:text="@string/lbl_cvc"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/text_regular_2x"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edtCVC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCVC"
                android:backgroundTint="@color/secondaryTextColor"
                android:hint="@string/lbl_cvc"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_medium_2"
                android:textColorHint="@color/secondaryTextColor"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmNewCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_login_btn"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:elevation="@dimen/margin_medium"
        android:text="@string/lbl_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_sign_in_with"
        app:cornerRadius="@dimen/margin_medium" />

</RelativeLayout>